--- a/index.html
+++ b/index.html
@@ -354,9 +354,8 @@
             <div class="interest-list">
                 <ul>
                     <li>Mood disorders, particularly bipolar disorder</li>
-		    <li>Age of onset and its association with symptom presentation</li>
+		    <li>Age of onset, Comorbid disorders, and its association with symptom presentation</li>
                     <li>Emotional regulation and mood lability across the lifespan</li>
-                    <li>Comorbid disorders and symptom presentation</li>
                     <li>Integration of psychiatric and therapeutic interventions</li>
                     <li>Psychopharmacology in the treatment of mood disorders</li>
                     <li>Clinical and neuropsychological assessment method</li>
