--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             <hr class="uline-wide">
             <div class="interest-list">
                 <ul>
-                    <li>Mood disorders, particularly bipolar disorder</li>
+                    <li>Mood disorders</li>
 		    <li>Age of onset, comorbid disorders, and its association with symptom presentation</li>
                     <li>Emotional regulation and mood lability across the lifespan</li>
                     <li>Integration of psychiatric and therapeutic interventions</li>
