--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                 I am currently a research area specialist associate at the Heinz C. Prechter Bipolar Research Program within Michigan Medicine’s Department of Psychiatry, where I work under Dr. Sarah Sperry, Dr. Kelly Ryan, and Dr. Melvin McInnis. My primary role focuses on the BD2 study (Breakthrough Discoveries for Thriving with Bipolar Disorder), where I coordinate various aspects of research aimed at better understanding and improving outcomes for individuals with bipolar disorder.
             </p>
             <p>
-                Throughout my training, I’ve gained broad experience in clinical and neuropsychological research, including participant recruitment, data collection and analysis, and administering cognitive and qualitative assessments. My long-term goal is to bridge the gap between psychiatry and therapy to promote better interventions for mood disorders.
+                Throughout my training, I’ve gained broad experience in clinical and neuropsychological research, including participant recruitment, data collection and analysis, and administering cognitive and qualitative assessments. Looking ahead, I am planning to pursue a PhD or PsyD in clinical psychology, with the goal of bridging the gap between psychiatry and therapy to promote better interventions for mood disorders.
             </p>
             <p>
                 If you share an interest in mood disorders or mental health research, I’d love to connect!
