--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
     <div class="about-section">
         <div class="about-bio">
             <p>
-                I recently graduated with High Honors from the University of Pittsburgh, earning a B.S. in Psychology and a minor in Studio Arts. My academic focus and research experiences have centered on understanding mood disorders, with a particular interest in bipolar disorder and the factors that influence emotional regulation.
+                I recently graduated with Honors from the University of Pittsburgh, earning a B.S. in Psychology and a minor in Studio Arts. My academic focus and research experiences have centered on understanding mood disorders, with a particular interest in bipolar disorder and the factors that influence emotional regulation.
             </p>
             <p>
                 At Pitt, I completed my honors thesis under the mentorship of Dr. Tina R. Goldstein, where I explored how mood lability and emotional regulation differ in children and adolescents with bipolar disorder compared to those with both bipolar disorder and comorbid ADHD. This project deepened my commitment to research on mood disorders and inspired me to continue studying the complexities of emotional health across the lifespan.
