--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
     	width: 22px;
    	 height: 22px;
 	}
+
+	.nav .contact-btn {
+    font-weight: bold;
+    margin-left: 15px;
+    margin-right: auto;
+	}
+
+	html {
+  scroll-behavior: smooth;
+}
+
         .nav svg {
             width: 30px;
             height: 30px;
@@ -302,6 +313,7 @@
 <body>
     <!-- NAVIGATION -->
     <nav class="nav">
+	<a href="#contact" class="contact-btn" title="Contact">Contact</a>
         <a href="mailto:JAD335@pitt.edu" class="email-icon" title="Email">&#9993;</a>
         <a href="https://www.linkedin.com/in/jack-dicarlantonio-4932a1296/" target="_blank" title="LinkedIn">
             <svg viewBox="0 0 24 24"><path d="M19 3A2 2 0 0 1 21 5V19A2 2 0 0 1 19 21H5A2 2 0 0 1 3 19V5A2 2 0 0 1 5 3H19M7.5 17V10.5H5V17H7.5M6.25 9.43C7.08 9.43 7.75 8.76 7.75 7.93C7.75 7.11 7.08 6.43 6.25 6.43C5.41 6.43 4.75 7.11 4.75 7.93C4.75 8.76 5.41 9.43 6.25 9.43M19 17V13.28C19 10.64 17.15 10.28 16.38 10.28C15.59 10.28 15.09 10.92 14.83 11.37V10.5H12.25V17H14.75V13.39C14.75 12.36 15.36 12.12 16 12.12C16.64 12.12 16.75 12.71 16.75 13.55V17H19Z"/></svg>
@@ -374,7 +386,7 @@
     </div>
 
     <!-- CONTACT -->
-    <div class="contact-section">
+    <div class="contact-section" id="contact">
         <div class="contact-title">Contact<br>Information</div>
         <hr class="cline">
         <div class="contact-block">
