--- a/index.html
+++ b/index.html
@@ -341,16 +341,16 @@
     <div class="about-section">
         <div class="about-bio">
             <p>
-                I recently graduated with Honors from the University of Pittsburgh, earning a B.S. in Psychology and a minor in Studio Arts. My academic focus and research experiences have centered on understanding mood disorders, with a particular interest in bipolar disorder and the factors that influence emotional regulation.
+                I recently graduated with honors from the University of Pittsburgh, earning a B.S. in Psychology and a minor in Studio Arts. My academic and research experiences have centered on understanding mood disorders, with a particular focus in bipolar disorder and the factors that influence emotional regulation.
             </p>
             <p>
                 At Pitt, I completed my honors thesis under the mentorship of Dr. Tina R. Goldstein, where I explored how mood lability and emotional regulation differ in children and adolescents with bipolar disorder compared to those with both bipolar disorder and comorbid ADHD. This project deepened my commitment to research on mood disorders and inspired me to continue studying the complexities of emotional health across the lifespan.
             </p>
             <p>
-                I am currently a research area specialist associate at the Heinz C. Prechter Bipolar Research Program within Michigan Medicine’s Department of Psychiatry, where I work under Dr. Sarah Sperry, Dr. Kelly Ryan, and Dr. Melvin McInnis. My primary role focuses on the BD2 study (Breakthrough Discoveries for Thriving with Bipolar Disorder), where I coordinate various aspects of research aimed at better understanding and improving outcomes for individuals with bipolar disorder.
+                I am currently a study coordinator for the Heinz C. Prechter Bipolar Research Program within Michigan Medicine’s Department of Psychiatry, where I work under Dr. Melvin McInnis, Dr. Kelly Ryan, and Dr. Sarah Sperry. My primary role focuses on the Breakthrough Discoveries for Thriving with Bipolar Disorder (BD<sup>2</sup>) study, where I execute various aspects of research aimed at better understanding and improving outcomes for individuals with bipolar disorder.
             </p>
             <p>
-                Throughout my training, I’ve gained broad experience in clinical and neuropsychological research, including participant recruitment, data collection and analysis, and administering cognitive and qualitative assessments. Looking ahead, I am planning to pursue a PhD or PsyD in clinical psychology, with the goal of bridging the gap between psychiatry and therapy to promote better interventions for mood disorders.
+                Throughout my training, I’ve gained broad experience in clinical and neuropsychological research, including participant recruitment, administering cognitive and qualitative assessments, and data analysis. Looking ahead, I am planning to pursue a PhD or PsyD in clinical psychology, with the goal of improving the integration of medication management and therapy to promote better interventions for mood disorders.
             </p>
             <p>
                 If you share an interest in mood disorders or mental health research, I’d love to connect!
